--- a/src/index.css
+++ b/src/index.css
@@ -12,16 +12,6 @@ code {
     monospace;
 }
 
-a{
-  text-decoration: none;
-  color: darkgray;
-}
-
-a :hover{
-  text-decoration: none;
-  color: darkgray;
-}
-
 .banner{
   min-height:85vh;
   overflow-x: hidden;
@@ -34,3 +24,41 @@ a :hover{
   width: 100%;
   overflow-y: hidden;
 }
+
+.small-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: bounce-down; 
+  animation-name: bounce-down; 
+  -webkit-animation-duration: 1.3s;
+  animation-duration: 1.3s; 
+  -webkit-animation-fill-mode: both; 
+  animation-fill-mode: both; 
+}
+
+.small-card:hover {
+  -webkit-animation-name: bounce; 
+  animation-name: bounce; 
+  -webkit-animation-duration: 1.3s;
+  animation-duration: 1.3s; 
+  -webkit-animation-fill-mode: both; 
+  animation-fill-mode: both; 
+}
+
+@-webkit-keyframes bounce { 
+  0% {-webkit-transform: translateY(0);} 
+  100% {-webkit-transform: translateY(-20px);} 
+} 
+@keyframes bounce { 
+  0% {-webkit-transform: translateY(0);} 
+  100% {-webkit-transform: translateY(-20px);} 
+}
+
+@-webkit-keyframes bounce-down { 
+  100% {-webkit-transform: translateY(0);} 
+  0% {-webkit-transform: translateY(-20px);} 
+} 
+@keyframes bounce-down { 
+  100% {-webkit-transform: translateY(0);} 
+  0% {-webkit-transform: translateY(-20px);} 
+}
+
