--- a/src/index.css
+++ b/src/index.css
@@ -1,64 +1,81 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
-.banner{
-  min-height:85vh;
+.banner {
+  min-height: 85vh;
   overflow-x: hidden;
   padding: 0;
   width: 100%;
 }
 
-.page{
+.page {
   min-height: 87.4vh;
   width: 100%;
   overflow-y: hidden;
 }
 
 .small-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-animation-name: bounce-down; 
-  animation-name: bounce-down; 
+  box-shadow:
+    0 4px 8px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  -webkit-animation-name: bounce-down;
+  animation-name: bounce-down;
   -webkit-animation-duration: 1.3s;
-  animation-duration: 1.3s; 
-  -webkit-animation-fill-mode: both; 
-  animation-fill-mode: both; 
+  animation-duration: 1.3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 .small-card:hover {
-  -webkit-animation-name: bounce; 
-  animation-name: bounce; 
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
   -webkit-animation-duration: 1.3s;
-  animation-duration: 1.3s; 
-  -webkit-animation-fill-mode: both; 
-  animation-fill-mode: both; 
+  animation-duration: 1.3s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
-@-webkit-keyframes bounce { 
-  0% {-webkit-transform: translateY(0);} 
-  100% {-webkit-transform: translateY(-20px);} 
-} 
-@keyframes bounce { 
-  0% {-webkit-transform: translateY(0);} 
-  100% {-webkit-transform: translateY(-20px);} 
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-20px);
+  }
+}
+@keyframes bounce {
+  0% {
+    -webkit-transform: translateY(0);
+  }
+  100% {
+    -webkit-transform: translateY(-20px);
+  }
 }
 
-@-webkit-keyframes bounce-down { 
-  100% {-webkit-transform: translateY(0);} 
-  0% {-webkit-transform: translateY(-20px);} 
-} 
-@keyframes bounce-down { 
-  100% {-webkit-transform: translateY(0);} 
-  0% {-webkit-transform: translateY(-20px);} 
+@-webkit-keyframes bounce-down {
+  100% {
+    -webkit-transform: translateY(0);
+  }
+  0% {
+    -webkit-transform: translateY(-20px);
+  }
 }
-
+@keyframes bounce-down {
+  100% {
+    -webkit-transform: translateY(0);
+  }
+  0% {
+    -webkit-transform: translateY(-20px);
+  }
+}
