--- a/src/index.css
+++ b/src/index.css
@@ -12,18 +12,50 @@ body {
 .page-container {
   position: relative;
   min-height: 100vh;
+
+  overflow-x: hidden;
 }
 
-.container-fluid {
-  padding-top: 2rem;
-  padding-bottom: 5rem;
+.container,
+.container-fluid,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
+  padding: 0px;
 }
 
 .footer,
 .nav {
   box-shadow:
-    0 4px 8px 0 rgba(0, 0, 0, 0.2),
-    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    0 4px 8px 0 rgba(120, 120, 120, 0.2),
+    0 6px 20px 0 rgba(120, 120, 120, 0.2);
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: black;
+}
+
+.bg-light {
+  background-color: #ffffff !important;
+}
+
+/* Styles for light theme container */
+.light-container {
+  background-color: #ffffff; /* Light background color */
+  color: #000000; /* Light text color */
+  /* Add any other styles specific to the light theme container */
+}
+
+/* Styles for dark theme container */
+.dark-container {
+  background-color: #333333; /* Dark background color */
+  color: #ffffff; /* Dark text color */
+  /* Add any other styles specific to the dark theme container */
 }
 
 .footer {
@@ -32,52 +64,47 @@ body {
   width: 100%;
 }
 
-.navbar-light .navbar-nav .nav-link {
-  color: black;
-}
-
-.banner {
+.light-banner {
   overflow-x: hidden;
   padding: 0;
   width: 100%;
   display: flex;
   flex-flow: column;
   height: 95vh;
-}
-
-.social-icon {
-  margin-left: 5px;
-}
-.light-bg {
-  background-color: white; /* For browsers that do not support gradients */
-  color: darkgray;
-}
-
-.dark-bg {
-  background: linear-gradient(
-    270deg,
-    #1e90ff,
-    #3d85c6,
-    #2c7bb6,
-    #0078d4,
-    #4682b4,
-    #357ebd
-  );
+  background-color: #005daf; /* For browsers that do not support gradients */
   background-size: cover;
-  -webkit-animation: AnimationName 20s ease infinite;
-  -moz-animation: AnimationName 20s ease infinite;
-  animation: AnimationName 20s ease infinite;
+  background: linear-gradient(270deg, #053864, #005daf, #f55d72, #df598a);
+  background-size: 800% 800%;
+  -webkit-animation: AnimationName 15s ease infinite;
+  -moz-animation: AnimationName 15s ease infinite;
+  animation: AnimationName 15s ease infinite;
+}
+
+.dark-banner {
+  overflow-x: hidden;
+  padding: 0;
+  width: 100%;
+  display: flex;
+  flex-flow: column;
+  height: 95vh;
+  background-color: #005daf; /* For browsers that do not support gradients */
+  background-size: cover;
+  background: linear-gradient(270deg, #02111c, #001c38, #4e0914, #3a0b21);
+  background-size: 800% 800%;
+  -webkit-animation: AnimationName 15s ease infinite;
+  -moz-animation: AnimationName 15s ease infinite;
+  animation: AnimationName 15s ease infinite;
 }
 
 .typewriter h1 {
   text-align: center;
   margin-left: 20px;
-  overflow: hidden;
-  border-right: 0.15em solid white;
-  letter-spacing: 0.15em;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid white; /* The typwriter cursor */ /* Keeps the content on a single line */ /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em; /* Adjust as needed */
   white-space: nowrap;
   animation:
-    typing 5s steps(40, end),
+    typing 3.5s steps(40, end),
     blink-caret 0.75s step-end infinite;
 }
 
@@ -102,7 +129,7 @@ body {
   }
 }
 
-@keyframes WaveBackground {
+@-webkit-keyframes AnimationName {
   0% {
     background-position: 37% 50%;
   }
@@ -112,4 +139,30 @@ body {
   100% {
     background-position: 37% 50%;
   }
+}
+@-moz-keyframes AnimationName {
+  0% {
+    background-position: 37% 50%;
+  }
+  50% {
+    background-position: 64% 50%;
+  }
+  100% {
+    background-position: 37% 50%;
+  }
+}
+@keyframes AnimationName {
+  0% {
+    background-position: 37% 50%;
+  }
+  50% {
+    background-position: 64% 50%;
+  }
+  100% {
+    background-position: 37% 50%;
+  }
+}
+
+.social-icon {
+  margin-left: 5px;
 }
