--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,6 @@ body {
 .page-container {
   position: relative;
   min-height: 100vh;
-
-  overflow-x: hidden;
 }
 
 .container,
@@ -25,11 +23,8 @@ body {
   padding: 0px;
 }
 
-.footer,
 .nav {
-  box-shadow:
-    0 4px 8px 0 rgba(120, 120, 120, 0.2),
-    0 6px 20px 0 rgba(120, 120, 120, 0.2);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .navbar-dark .navbar-nav .nav-link {
