--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
 body {
   margin: 0;
   font-family: "Roboto", "Arial", sans-serif;
@@ -5,67 +7,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-/* Add the Roboto font */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
-
-/* Rest of your CSS remains unchanged */
-.page-container {
-  position: relative;
-  min-height: 100vh;
-}
-
-.container,
-.container-fluid,
-.container-lg,
-.container-md,
-.container-sm,
-.container-xl {
-  padding: 0px;
-}
-
-.nav {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-dark .navbar-nav .nav-link {
-  color: white;
-}
-
-.navbar-light .navbar-nav .nav-link {
-  color: black;
-}
-
-.bg-light {
-  background-color: #ffffff !important;
-}
-
-/* Styles for light theme container */
-.light-container {
-  background-color: #ffffff; /* Light background color */
-  color: #000000; /* Light text color */
-  /* Add any other styles specific to the light theme container */
-}
-
-/* Styles for dark theme container */
-.dark-container {
-  background-color: #333333; /* Dark background color */
-  color: #ffffff; /* Dark text color */
-  /* Add any other styles specific to the dark theme container */
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-
-.light-banner {
+.banner {
   overflow-x: hidden;
   padding: 0;
   width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-flow: column;
-  height: 95vh;
   background-color: #005daf; /* For browsers that do not support gradients */
   background-size: cover;
   background: linear-gradient(270deg, #053864, #005daf, #f55d72, #df598a);
@@ -73,55 +21,6 @@ body {
   -webkit-animation: AnimationName 15s ease infinite;
   -moz-animation: AnimationName 15s ease infinite;
   animation: AnimationName 15s ease infinite;
-}
-
-.dark-banner {
-  overflow-x: hidden;
-  padding: 0;
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  height: 95vh;
-  background-color: #005daf; /* For browsers that do not support gradients */
-  background-size: cover;
-  background: linear-gradient(270deg, #02111c, #001c38, #4e0914, #3a0b21);
-  background-size: 800% 800%;
-  -webkit-animation: AnimationName 15s ease infinite;
-  -moz-animation: AnimationName 15s ease infinite;
-  animation: AnimationName 15s ease infinite;
-}
-
-.typewriter h1 {
-  text-align: center;
-  margin-left: 20px;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: 0.15em solid white; /* The typwriter cursor */ /* Keeps the content on a single line */ /* Gives that scrolling effect as the typing happens */
-  letter-spacing: 0.15em; /* Adjust as needed */
-  white-space: nowrap;
-  animation:
-    typing 3.5s steps(40, end),
-    blink-caret 0.75s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: white;
-  }
 }
 
 @-webkit-keyframes AnimationName {
@@ -156,8 +55,4 @@ body {
   100% {
     background-position: 37% 50%;
   }
-}
-
-.social-icon {
-  margin-left: 5px;
 }
